5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1633_2922.log
== TEST (2019-04-02 18:09:21) 
-- CODE:
tempo_investimento = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**1/t) - 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    i = ((1042000/1500)**1/t) - 1
NameError: name 't' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:09:34) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**1/t) - 1
print(i)
-- OUTPUT:
6.718518518518518
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:09:40) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**1/t) - 1
print(i)
-- EXECUTION TIME:
0.166152
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
6.718518518518518
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
6.016835016835016
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
4.741046831955923
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:09:57) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**1/t) - 1
print(round(i,5))
-- OUTPUT:
6.71852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:10:02) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**1/t) - 1
print(round(i,5))
-- OUTPUT:
6.71852
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:10:06) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**1/t) - 1
print(round(i,5))
-- EXECUTION TIME:
0.204052
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
6.71852
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
6.01684
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
4.74105
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:10:09) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**1/t) - 1
print(round(i,5))
-- EXECUTION TIME:
0.135507
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
6.71852
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
6.01684
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
4.74105
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:27) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**(1/t)) - 1
print(round(i,5))
-- OUTPUT:
0.07541
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:11:42) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**(1/t)) - 1
print(round(i,5))
-- OUTPUT:
0.07541
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:11:49) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
i = ((1042000/1500)**(1/t)) - 1
print(round(i,5))
-- EXECUTION TIME:
0.132183
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
0.07541
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
0.06833
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
0.05557
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:12:51) 
-- CODE:
t = float(input("digite o tempo de investimento: "))
qf = 1042000
qo = 1500
i = ((qf/qo)**(1/t)) - 1

print(round(i,5))
-- EXECUTION TIME:
0.194164
-- TEST CASE 1:
---- input:
90
---- correct output:
0.07541
---- user output:
0.07541
-- TEST CASE 2:
---- input:
99
---- correct output:
0.06833
---- user output:
0.06833
-- TEST CASE 3:
---- input:
121
---- correct output:
0.05557
---- user output:
0.05557
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
